# key-switch-rs

./: Cargo.toml  README.md  app.manifest  build.rs
.claude/agents/: README.md  key-switch-coder.md  key-switch-researcher.md  key-switch-reviewer.md
src/: ipc.rs  lib.rs  main.rs
src/config/: default_config.ron  loader.rs  mod.rs  parsing.rs  schema.rs
src/core/: app.rs  constants.rs  mod.rs  windows_actions.rs
src/data/: binding.rs  condition.rs  key_combination.rs  mod.rs  sequence.rs  trigger.rs  vk_name.rs
src/hook/: chord_state.rs  config_watcher.rs  ipc_server.rs  keyboard_hook.rs  keyboard_hook_callback.rs  mod.rs  sequence_state.rs  tap_state.rs
src/system/: mod.rs  registry.rs  system_function.rs
