[package]
name = "key-switch-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
# (no build-dependencies; manifest embedding is done via raw linker args
#  in build.rs so we can target a single binary, not all of them.)

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
serde = { version = "1", features = ["derive"] }
ron = "0.10"
arc-swap = "1"
notify = "8"
interprocess = "2"
